# zeno-rs

./: Cargo.toml  README.md
crates/zeno-apidoc/: Cargo.toml
crates/zeno-blade/: Cargo.toml
crates/zeno-blade/src/: slots.rs  transpiler.rs
crates/zeno-plugin-example/: Cargo.toml
crates/zeno-plugin-example/src/: lib.rs
crates/zeno-std/: Cargo.toml
crates/zenocore/: Cargo.toml
crates/zenocore/src/: analysis.rs  executor.rs  lib.rs
crates/zenocore/src/slots/: collection.rs  logic.rs  math.rs  mod.rs  string.rs  utility.rs
crates/zenoengine/: Cargo.toml
