[package]
name = "zenocore"
version = "0.2.1"
edition = "2024"
description = "Zero-dependency core engine for ZenoLang — lexer, parser, executor, and scope for the zeno-rs ecosystem"
license = "Apache-2.0"
authors = ["NextCore <github.com/nextcore>"]
repository = "https://github.com/nextcore/zeno-rs"
homepage = "https://github.com/nextcore/zeno-rs"
documentation = "https://docs.rs/zenocore"
readme = "../../README.md"
keywords = ["template", "scripting", "engine", "blade", "zeno"]
categories = ["template-engine", "parser-implementations", "web-programming"]

[dependencies]
libloading = { version = "0.8", optional = true }

[features]
default = ["plugins"]
plugins = ["dep:libloading"]

