[package]
name = "zenoengine"
version = "0.1.0"
edition = "2024"
description = "Batteries-included Rust web engine — Blade templating, ZenoLang scripting, OpenAPI docs, and standard library in one facade"
license = "Apache-2.0"
authors = ["NextCore <github.com/nextcore>"]
repository = "https://github.com/nextcore/zeno-rs"
homepage = "https://github.com/nextcore/zeno-rs"
documentation = "https://docs.rs/zenoengine"
readme = "../../README.md"
keywords = ["blade", "template", "scripting", "web", "axum"]
categories = ["template-engine", "web-programming", "rendering"]

[dependencies]
zenocore    = { path = "../zenocore",   version = "0.1.0" }
zeno-std    = { path = "../zeno-std",   version = "0.1.0" }
zeno-apidoc = { path = "../zeno-apidoc", version = "0.1.0" }
zeno-blade  = { path = "../zeno-blade", version = "0.1.0" }
